# odoo-dependency-trimmer

./: .pre-commit-hooks.yaml  README.md  create_dependency.py  create_version_tree.py  setup.cfg  setup.py
tools/: create_dependency.py  create_version_tree.py
trees/: 14.0.json  15.0.json
