[metadata]
name = odoo-dependency-trimmer
version = 0.0.1
author = Pascual Lorente (palo@odoo.com)
description = Small utility to reduce the number of manifest depends
license = AGPL3
include_package_data = True
install_requires =
    argparse
    ast
    os
    collections
    pathlib
entry_points.console_scripts =
    dependency-trimmer=tools:create_dependency

[options]
packages = tools
python_requires = >=3.6
